<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".sale">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="472dp"
        android:layout_height="281dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kniga1"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="372dp"
        android:layout_height="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="38dp"
        android:text="@string/text23"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="381dp"
        android:layout_height="469dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="29dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="-13dp"
                android:text="@string/text22"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="383dp"
                android:clickable="true"
                android:onClick="labis1"
                android:layout_height="285dp"
                app:srcCompat="@drawable/salelab"
                android:focusable="true"
                android:contentDescription="@string/text21" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="29dp"
                android:layout_marginRight="10dp"

                android:text="@string/text20"
                android:textAlignment="center"

                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="readcitys1"
                android:layout_height="196dp"
                app:srcCompat="@drawable/salereadcity"
                android:focusable="true"
                android:contentDescription="@string/text18" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="29dp"
                android:layout_marginRight="10dp"
                android:text="@string/text7"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="myshops1"
                android:layout_height="133dp"
                app:srcCompat="@drawable/slaemyshop"
                android:focusable="true"
                android:contentDescription="@string/text17" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="29dp"
                android:layout_marginRight="10dp"

                android:text="@string/text8"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="litrs1"
                android:layout_height="143dp"
                app:srcCompat="@drawable/salelitres"
                android:focusable="true"
                android:contentDescription="@string/text15" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:layout_marginTop="10dp"
                android:text="@string/text9"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>