<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".news">

    <Button
        android:id="@+id/arr1"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/text6"
        app:layout_constraintStart_toEndOf="@+id/arr3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/arr2"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text5"
        app:layout_constraintBottom_toTopOf="@+id/arr4"
        app:layout_constraintEnd_toStartOf="@+id/arr5"
        app:layout_constraintTop_toBottomOf="@+id/arr5" />

    <Button
        android:id="@+id/arr3"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/text4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arr1" />

    <Button
        android:id="@+id/arr4"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:text="@string/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/arr5"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:text="@string/text2"
        app:layout_constraintEnd_toEndOf="@+id/arr4"
        app:layout_constraintStart_toStartOf="@+id/arr1"
        app:layout_constraintTop_toBottomOf="@+id/arr3" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="1015dp"
        android:layout_height="942dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/fafa"
        android:contentDescription="@string/todo10" />

</android.support.constraint.ConstraintLayout>