<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".buy">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="462dp"
        android:layout_height="251dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kniga3"
        android:contentDescription="@string/todo4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="462dp"
        android:layout_height="251dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kniga3"
        android:contentDescription="@string/todo3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/text24"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="335dp"
                android:layout_height="164dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:onClick="labi1"
                android:paddingRight="10dp"


                app:srcCompat="@drawable/labi"
                android:focusable="true"
                android:contentDescription="@string/todo2" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="371dp"
                android:layout_height="209dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:onClick="litr1"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/litres"
                android:focusable="true"
                android:contentDescription="@string/todo7" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="346dp"
                android:layout_height="163dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_weight="20"
                android:clickable="true"
                android:onClick="readcity1"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/readsity"
                android:focusable="true"
                android:contentDescription="@string/todo6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="344dp"
                android:layout_height="219dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:onClick="myshop1"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/myshop"
                android:focusable="true"
                android:contentDescription="@string/todo5" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text25"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>